# fungku

./: README.md  main.py  posture.sqlite3  pyproject.toml  req.txt
helper/: database.py  model.py
result/predict/: 6fb13bdd-7812-4bd4-9288-d22d1891ef86.avi  6fb13bdd-7812-4bd4-9288-d22d1891ef86.npy
result/predict3/: 953f1178-48b9-444c-8abc-f17657ab19a7.npy
result/predict4/: 1393e8bc-30d2-4603-8199-82e2ed27dfe4.avi  1393e8bc-30d2-4603-8199-82e2ed27dfe4.npy
result/predict5/: 60781e0d-adf1-48aa-a610-00d9a510cd59.avi  60781e0d-adf1-48aa-a610-00d9a510cd59.npy
result/predict6/: 1342de2e-88b4-4676-934c-a196752fd43f.avi  1342de2e-88b4-4676-934c-a196752fd43f.npy
result/predict7/: 69c5282a-f867-4f47-b690-73f6b195f5ad.avi  69c5282a-f867-4f47-b690-73f6b195f5ad.npy
