[project]
name = "work"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastdtw>=0.3.4",
    "matplotlib>=3.10.7",
    "mediapipe>=0.10.14",
    "opencv-python>=4.12.0.88",
    "pillow>=12.0.0",
    "pyqt6>=6.10.0",
    "scikit-image>=0.25.2",
    "scipy>=1.16.3",
    "ultralytics>=8.3.227",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pyqt5==5.15.11",
    "pyqt5-qt5==5.15.2",
]
